--- a/composer.json
+++ b/composer.json
@@ -35,6 +35,11 @@
         "psr-4": {
             "App\\": "app/"
         },
+         "files": [
+
+        "app/Helper/helpers.php"
+
+    ],
         "classmap": [
             "database/seeds",
             "database/factories"
